--- a/Slak/27.md
+++ b/Slak/27.md
@@ -298,7 +298,7 @@ Isidore also states that there is a distinction between astronomy and astrology,
 
  [^632:3]: Indeed, _Differentiarum_, II, 39, he defines astrology as he had  astronomy in _Etymol_., Ill, 27. In Etymol., Ill, 25, he ascribes the invention of astronomy to the  Egyptians and that of astrology  to the Chaldeans.
 
-### In the _ De natura rerum_ .
+### In the De natura rerum.
 
 In the preface to his _ De natura rerum_, which deals chiefly with astronomical and meteorological phenomena, Isidore asserts that "it is not superstitious science to know the nature of these things, if only they are considered from the standpoint of sane and sober doctrine." He also states that, his treatise is a brief sketch of what has been written by the men of old and especially in the works of Catholics. In it some of the stock questions which gave difficulty to Christian scientists are briefly discussed, for instance, "Concerning the waters which are above the heavens," and "Whether the stars have souls?"  [^632:4]  
 
