--- a/Slak/27.md
+++ b/Slak/27.md
@@ -9,7 +9,7 @@ The erudite fortitude of students of the Merovingian period commands our admirat
 
  ## Boethius
  
-### Historic importance of _ The Consolation of Philosophy_ 
+### Historic importance of The Consolation of Philosophy 
 
 Of the distinguished family and political career of Boe- thius who lived from about 480 to 524 A. D., and his final exile, imprisonment, and execution by Theodoric the East Goth, we need scarcely speak here. Our concern is with his little book. _ The Consolation of Philosophy_, one of those memorable writings which, like _The City of God_ of Augustine, stand out as historical landmarks and seem to have been written on the right subject by the right man at the most dramatic moment. The timely appearance of such works, produced in both these cases not under the stimulus of triumphant victory but the sting of bitter defeat, is nevertheless perhaps less surprising than is their subsequent preservation and enormous influence. We often are alternately amused and amazed by the mistakes concerning historical and chronological detail found in medieval writers. Yet medieval readers showed considerable appreciation of the course of history, of its fundamental tendencies, and of its crucial moments by the works which they included in their meager libraries. 
 
