--- a/Slak/27.md
+++ b/Slak/27.md
@@ -145,7 +145,7 @@ Its influence also would seem not to have been entirely beneficial, since writer
 
  [^623:4]: To say, for example, that "so hospitable an attitude toward profane learning as Isidore displayed . . . was never surpassed throughout the middle ages" (Brehaut,  p. 31), is unfair to many later writers, as our discussion of the natural science of the twelfth and  thirteenth centuries will show. 
 
-### Method of the_ Etymologies_.
+### Method of the Etymologies
 
 The _Etymologies_ is little more than a dictionary, in which words are not listed alphabetically but under subjects with an average of from one to a half dozen lines of derivation and definition for each term. The method is, as Brehaut well says, "to treat each subject by , . . defining the terms belonging to it."  [^624:1] Pursuing this method, Isidore treats of various arts and sciences, human interests and natural phenomena: the seven liberal arts, medicine, and law; chronology and bibliography; the church, religion, and theology; the state and family, physiology, zoology, botany, mineralogy, geography, and astronomy; architecture and agriculture; war and sport; arms and armor; ships and costume and various utensils of domestic life.  
 Such is the classification which later medieval writers were to adopt or adapt rather than the arrangement followed in Pliny's Natural History. Isidore's association of words and definitions under topics makes an approach, at least, to the articles of encyclopedias: sometimes there is a brief discussion of the general topic before the particular terms and names are considered; sometimes there are chronological tables, family trees, or lists of signs and abbreviations. In short, Isidore forms a connecting link between Pliny and the encyclopedists of the thirteenth century. 
