--- a/Slak/26.md
+++ b/Slak/26.md
@@ -75,7 +75,7 @@ Personal purity and clean clothing are often enjoined upon those gathering the h
 
  [^599:1]: The above passages are from Sloane 1975 and the edition of 1547.
 
-### A "Precantation of all herbs"
+### Precantation of all herbs
 
 In some manuscripts a "Precantation of all herbs" is placed at the beginning of the treatise.  [^599:2]   
 It prescribes such procedure as holding a mirror over the herb before plucking it before sunrise under a waning moon. The person plucking the herb and uttering the incantation must be barefoot, unguarded, chaste, and wear no ring. The plant is adjured not only "by the living God" and "the holy name of God, Sabaoth," but also by Seia, the Roman goddess of sowing, and by "GS," which presumably stands for Gaia Seia, an expression which is once written out in full. Some meaningless words are also repeated. 
