--- a/Slak/26.md
+++ b/Slak/26.md
@@ -162,7 +162,7 @@ and although Pico della Mirandola ranked the _Cosmography_ as one of the most ab
 
 As for magic, in one passage malefici and magi are censured along with idolaters, and the author presently speaks of vain characters and superstitious doctrines. But elsewhere a magician (Pirronius magus) is named as the inventor of ships and discoverer of purple. On the whole, in its loose and hazy way the Cosmography not only is romantic and religious enough to appeal to medieval readers, it also is of a character to offer encouragement, if not data, to a later and more detailed interest in alchemy, occult virtues, astrology, and magic. 
 
-### The _Geoponica_.
+### The Geoponica.
 
 Upon the subject of agriculture in the early middle ages we have the collection known as the _Geoponica_. It properly belongs to Byzantine literature and perhaps had little direct influence upon western Europe. Nevertheless at least a por- tion of it upon vineyards was translated into Latin by Burgundio of Pisa in the twelfth century.  [^604:1] In any case as the 
 
@@ -214,7 +214,7 @@ Another passage advises a person who finds himself in a place full of fleas to c
 
 Perhaps the chief ancient work on pharmacology was the _De materia medica_ or Περὶ ὕλης ἰατρικῆς of Pedanius Dioscorides of Anazarba. Galen, as we have seen, found things to criticize in it but nevertheless made great use of it in his own work on medicinal simples. Dioscorides of course had his previous sources but seems to have surpassed them in fulness and orderliness of arrangement. Of the man himself his preface tells us all that we know, and his dedication shows that he probably wrote during the reign of Nero. He was born in Cilicia near Tarsus, he had traveled in many lands as a soldier, and his work was based partly upon personal observation and experience as well as previous books. 
 
-### Textual history of the _De materia medica_.
+### Textual history of the De materia medica.
 
 Dioscorides' influence continued and even increased as time went on; but if future centuries were deeply influenced by his book, it was also seriously affected by them, for it seems to have been subjected to a long series of repeated abbreviations and omissions, additions and interpolations, changes in form and in order. Thus all sorts of versions of what was called Dioscorides came into being, but which in some cases can hardly be regarded as more than compilations from all the favorite pharmacies of the time, in which the genuine Dioscorides constituted but a remnant or a core. Thus most early printed editions of what purports to be the _De materia medica_ must be handled with great caution, and it may perhaps be doubted if even the latest effort of Max Wellmann to recover the original Greek text has been entirely successful.  [^606:1] 
 
