--- a/Slak/27.md
+++ b/Slak/27.md
@@ -424,7 +424,7 @@ Pitra,  [^636:5] however, suggested that the Adhelmus cited by Thomas of Cantimp
  
  ## Gregory the Great
  
- ### _Dialogues_.
+ ### Dialogues
  
 The total lack of originality and the extremely abbreviated character of the infrequent scientific writings in the west is not, however, a fair example of the total thought and writing of early medieval Latin Christendom, When we turn to the lives of the saints, to the miracles recorded of contemporary monks and missionaries, we find that in the field of its own supreme interests the pious imagination of the time could display considerable inventiveness and was by no means satisfied with brief compendiums from the Bible and earlier Fathers. Here too the superstition and credulity, which had been held back by fear of paganism in the case of natural and occult science, ran luxuriant riot. Such literature lies rather outside the strict field of this investigation, but it is so characteristic of the Christian thought of the period that we may consider one prominent specimen, the _ Dialogues_ of Gregory the Great,  [^637:1] pope from 590 to 604.  
 We shall sufficiently illustrate the nature of this farrago of pious folk-lore by a resume of the contents of the opening pages of the first of its four books. We need not dwell upon the importance of Gregory in the history of the papacy, of monasticism, and of patristic literature, further than to emphasize the point that so distinguished, influential, and for his times great, a man should have been capable of writing such a book. Similar citations which might be multiplied from other authors of the period could not add much force to this one impressive instance of the naive pious credulity and superstition of the best Christian minds of that age.  
