--- a/Slak/27.md
+++ b/Slak/27.md
@@ -469,7 +469,7 @@ as it has reached us, is almost entirely religious in character,  [^640:2] produ
 
   [^640:2]: The Gaelic medical MSS, whether preserved in Ireland, Scotland, or elsewhere, . . . are all, or nearly all, of foreign origin": Mackinnon, in the International Congress of Medicine. London, 1913, p. 413.
  
- ### The _Fili_.
+ ### The Fili
  
 The Irish had their _Fili_ corresponding somewhat to the Druids of Gaul or Britain. They were perhaps less closely connected with heathen rites, since the church seems to have been less opposed to them than to the Druids. They were poets and learned men, and a large part of their learning, at least originally, seems to have consisted of magic and divination. There are many instances in Irish literature of their disfiguring the faces of their enemies by raising blotches upon them by the power of words which they uttered. St. Patrick forbade two of their three methods of divination. 
 
